kubernetes/nginx/external-lb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: external-lb
spec:
  controller: giovanemere.minikube.io/giovanemereio-ingress
  parameters:
    apiGroup: k8s.example.com
    kind: IngressParameters
    name: external-lb
