kubernetes/nginx/giovanemereio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:   
  name: giovanemereio-ingress 
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:   
  tls:
    - hosts:
      - giovanemere.minikube.io
      secretName: tls-certificate
  rules:   
    - host: giovanemere.minikube.io 
      http:   
        paths:   
          - path: /
            pathType: Prefix   
            backend:   
              service:   
                name: web   
                port:   
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
